# stuffchat

./: .gitignore  Cargo.toml  README.md  config.toml
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
frontend/: frontend.js  index.html  main.js  style.css
frontend/modules/: admin.js  api.js  auth.js  channels.js  clouds.js  emojis.js  invites.js  messages.js  mysterious.js  presence.js  rain.js  settings.js  shareplay.js  socket.js  store.js  themeCanvas.js  users.js  utils.js  voice.js
migrations/: 0001_init.sql  0002_presence_profile_pictures.sql  0003_invites.sql  0004_channel_unread.sql  0005_unread_timestamps.sql  0006_custom_emojis.sql  0007_reactions.sql
src/: api_documentation.md  auth.rs  config.rs  db.rs  errors.rs  main.rs  permissions.rs  shareplay.rs  utils.rs
src/models/: channel.rs  file.rs  message.rs  mod.rs  role.rs  user.rs
src/routes/: admin.rs  auth.rs  channels.rs  emojis.rs  files.rs  health.rs  invites.rs  messages.rs  mod.rs  presence.rs  reactions.rs  shareplay.rs  users.rs
src/ws/: server.rs  session.rs
