[package]
name = "stuffchat"
version = "0.8.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-web-actors = "4"
actix-multipart = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.9"
jsonwebtoken = "9"
env_logger = "0.11"
log = "0.4"
sanitize-filename = "0.6"
infer = "0.19"
futures-util = "0.3"
thiserror = "2"
actix = "0.13.5"
actix-files = "0.6.6"
anyhow = "1.0.99"
actix-cors = "0.7.1"
urlencoding = "2.1.3"
